# mlops_demo

./: .dockerignore  .env.example  .env.production  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  PUSH_TEST.md  README.md  docker-compose.yml  generate_history.py  pyproject.toml  requirements.txt  run_eda.py  run_feature_engineering.py  run_model_development.py  test_basic_compatibility.py
.github/workflows/: ci.yml  ci.yml.disabled  deployment.yml  mlops-pipeline.yml  model-training.yml  monitoring.yml  release.yml
configs/: data.yaml  experiment.yaml  model.yaml  monitoring.yaml  serve.yaml  training.yaml
data/: feature_info.json
data/raw/sample/: creditcard_sample.csv
data/sample/: creditcard_sample1.csv
docs/: SEARCH_REPLACE_RULES.md  api_docs.md  assistant_info.txt  data_card.md  model_card.md  monitoring_guide.md  project_report.md
models/: advanced_performance_report.json  model_metadata.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: mlops-dashboard.json
notebooks/: 01_eda.ipynb  01_eda.py  02_feature_engineering.ipynb  03_model_development.ipynb  04_advanced_analytics.ipynb
scripts/: download_data.py  evaluate_model.py  example_run_monitoring.sh  generate_pdf_report.py  quick_train_model.py  run_drift_monitoring.sh  run_monitoring.py  serve_model.py  train_model.py
scripts/temp/: evaluate_model.py  serve_model.py
sql/: init.sql
src/fraud_detection/: __init__.py  config.py  utils.py
src/fraud_detection/data/: ingestion.py  preprocessing.py  validation.py
src/fraud_detection/evaluation/: evaluate.py  metrics.py
src/fraud_detection/features/: engineering.py  schema.py  selection.py
src/fraud_detection/models/: __init__.py  base.py  ensemble.py  neural_network.py  registry.py
src/fraud_detection/monitoring/: drift.py  performance.py
src/fraud_detection/serve/: api.py  predictor.py
src/fraud_detection/training/: train.py  tune.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_data.py  test_models.py  test_monitoring.py
